[package]
name = "sandcastle"
description = "Interface focused scene graph"
license = "MIT/Apache-2.0"
homepage = "https://github.com/bfrog/sandcastle-rs"
repository = "https://github.com/bfrog/sandcastle-rs"
documentation = "https://docs.rs/sandcastle/0.0.1"
version = "0.0.1"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
keywords = ["ui", "scenegraph", "widgets", "vulkan"]

[dependencies]
euclid = "0.18"
image = "0.19"
